project/phase2/test/test_2_r10.out
Error type 10 at line 12: indexing on non-array variable